[tool.poetry]
name = "image-sequence"
version = "0.1.0"
description = ""
authors = ["Tom Sugden <tom@tomsugden.uk>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.13.9"
mypy = "^0.960"
pydocstyle = "^6.1.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
