[tool.poetry]
name = "image-sequence"
version = "0.1.0"
description = ""
authors = ["Tom Sugden <tom@tom.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.13.9"
mypy = "^0.960"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
